--- a/Resources/views/ConstructionSite/edit.html.twig
+++ b/Resources/views/ConstructionSite/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block title %}
-    {{ 'zimzim_constructionsite.new.title'|trans({}, "ZIMZIMConstructionSite") }}
+    {{ 'zimzim_constructionsite.edit.title'|trans({'%name%': entity.name}, "ZIMZIMConstructionSite") }}
 {% endblock title %}
 
 
@@ -9,13 +9,13 @@
     <div class="row">
         <div class="medium-12 columns">
             <h1 class="text-center title">
-                {{ 'zimzim_constructionsite.new.title'|trans({}, "ZIMZIMConstructionSite") }}
+                {{ 'zimzim_constructionsite.edit.title'|trans({'%name%': entity.name}, "ZIMZIMConstructionSite") }}
             </h1>
         </div>
     </div>
 
     <div class="">
-        {{ form(form) }}
+        {{ form(edit_form) }}
     </div>
 
     <div class="row">
@@ -24,6 +24,9 @@
                 <i class="icon-arrow-left icon-normal vertical"></i>
                 {{ 'link.return'|trans }}
             </a>
+        </div>
+        <div class="small-4 columns text-center">
+            {{ form(delete_form) }}
         </div>
     </div>
 
