--- a/Resources/views/ConstructionSite/show.html.twig
+++ b/Resources/views/ConstructionSite/show.html.twig
@@ -18,61 +18,66 @@
                     <td>{{ entity.id }}</td>
                 </tr>
                 <tr>
-                    <th>Name</th>
+                    <th>{{ 'constructionsite.name'|trans({}, "ZIMZIMConstructionSite") }}</th>
                     <td>{{ entity.name }}</td>
                 </tr>
                 <tr>
-                    <th>Text</th>
+                    <th>{{ 'constructionsite.text'|trans({}, "ZIMZIMConstructionSite") }}</th>
                     <td>{{ entity.text }}</td>
                 </tr>
                 <tr>
-                    <th>City</th>
-                    <td>{{ entity.city }}</td>
-                </tr>
-                <tr>
-                    <th>Date</th>
-                    <td>{{ entity.date|date('Y-m-d H:i:s') }}</td>
-                </tr>
-                <tr>
-                    <th>Duration</th>
-                    <td>{{ entity.duration }}</td>
-                </tr>
-                <tr>
-                    <th>Createdat</th>
-                    <td>{{ entity.createdAt|date('Y-m-d H:i:s') }}</td>
-                </tr>
-                <tr>
-                    <th>Pathbefore</th>
-                    <td><img src="/{{ entity.getWebPathBefore }}" class="img-medium"/></td>
-                </tr>
-                <tr>
-                    <th>Pathpending</th>
-                    <td><img src="/{{ entity.getWebPathPending }}" class="img-medium"/></td>
-                </tr>
-                <tr>
-                    <th>Pathafter</th>
-                    <td><img src="/{{ entity.getWebPathAfter }}" class="img-medium"/></td>
-                </tr>
-                <tr>
-                    <th>Titleseo</th>
+                    <th>{{ 'constructionsite.titleSeo'|trans({}, "ZIMZIMConstructionSite") }}</th>
                     <td>{{ entity.titleSeo }}</td>
                 </tr>
                 <tr>
-                    <th>Descseo</th>
+                    <th>{{ 'constructionsite.descSeo'|trans({}, "ZIMZIMConstructionSite") }}</th>
                     <td>{{ entity.descSeo }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.city'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td>{{ entity.city }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.created_at'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td>{{ entity.createdAt|date('d/m/Y H:i:s') }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.date'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td>{{ entity.date|date('d/m/Y H:i:s') }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.duration'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td>{{ entity.duration }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.imagebefore'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td><img src="/{{ entity.getWebPathBefore }}" class="img-medium"/></td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.imagepending'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td><img src="/{{ entity.getWebPathPending }}" class="img-medium"/></td>
+                </tr>
+                <tr>
+                    <th>{{ 'constructionsite.imageafter'|trans({}, "ZIMZIMConstructionSite") }}</th>
+                    <td><img src="/{{ entity.getWebPathAfter }}" class="img-medium"/></td>
                 </tr>
                 </tbody>
             </table>
 
             <h2 class="text-center">
                 {{ 'zimzim_constructionsite.show.list'|trans({}, "ZIMZIMConstructionSite") }}
+                &nbsp;-&nbsp;
+                <a class="tiny button"
+                   href="{{ path('zimzim_constructionsite_actionitem_addoncs', { 'id': entity.id }) }}">
+                    {{ 'zimzim_constructionsite.show.addoncs'|trans({}, "ZIMZIMConstructionSite") }}
+                </a>
             </h2>
 
             <div class="row panel">
                 {% for actionItem in entity.actionItems %}
-                    <div class="small-3 columns">
+                    <div class="small-3 columns bgprimary text-center">
                         <a href="{{ path('zimzim_constructionsite_actionitem_edit', {'id': actionItem.id}) }}"
-                           class="button tiny">
+                           class="secondarycolor">
                             <span class="icon-pencil icon-medium"></span> - {{ actionItem.name }}
                         </a>
                     </div>
@@ -87,16 +92,10 @@
                         {{ 'link.return'|trans }}
                     </a>
                 </div>
-                <div class="small-2 columns text-center">
+                <div class="small-4 columns text-center">
                     <a class="tiny button"
                        href="{{ path('zimzim_constructionsite_constructionsite_edit', { 'id': entity.id }) }}">
                         {{ 'button.update'|trans }}
-                    </a>
-                </div>
-                <div class="small-2 columns text-center">
-                    <a class="tiny button"
-                       href="{{ path('zimzim_constructionsite_actionitem_addoncs', { 'id': entity.id }) }}">
-                        {{ 'zimzim_constructionsite.show.addoncs'|trans({}, "ZIMZIMConstructionSite") }}
                     </a>
                 </div>
                 <div class="small-4 columns text-center">
